# hiero-streams-rs

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  build.rs  deny.toml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  fuzz.yml  release.yml  sentinel.yml  watch-cutover.yml
bindings/node/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  test.mjs
bindings/node/src/: lib.rs
docs/: ARCHITECTURE.md  CODE-TOUR.md  MIGRATION.md  sentinel-state.json  watch-state.json
examples/: chain_check.rs  fee_report.rs  parse_dir.rs  parse_one.rs  verify_block.rs  verify_offline.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: address_book.rs  parse_block.rs  parse_proof.rs  parse_record.rs  parse_signature.rs  verify_proof.rs
proto/: VENDOR_NOTE
proto-hapi/: VENDOR_COMMIT
src/: json.rs  lib.rs  main.rs  parse.rs  transaction.rs  verify.rs
src/block/: material.rs  merkle.rs  mod.rs  wire.rs
src/block/proof/: hints.rs  mod.rs  poseidon.rs  schnorr.rs  wraps.rs
src/cli/: attest.rs  mod.rs  sentinel.rs
src/cli/etl/: block.rs  mod.rs  parquet.rs  record.rs
src/record/: mod.rs  verify.rs
tests/: block_chain.rs  block_parse.rs  block_proof_differential.rs  block_witness.rs  differential.rs  record_mirror_differential.rs  record_snapshot.rs  record_verify.rs  robustness.rs  verify_test.rs
tests/common/: mod.rs
tests/fixtures/: README.md  golden-v6.json
tests/fixtures/mainnet/: mirror-2026-07-04T00_00_00.229684000Z.json  mirror-2026-07-04T00_00_08.072085756Z.json  mirror-2026-07-04T00_00_10.016106752Z.json  mirror-2026-07-04T00_00_18.007043000Z.json  mirror-2026-07-04T00_00_58.253107948Z.json  mirror-2026-07-04T00_01_38.498267782Z.json  mirror-2026-07-04T00_03_20.845066000Z.json  mirror-2026-07-04T00_03_22.105628083Z.json  mirror-2026-07-04T00_03_24.220788000Z.json  mirror-2026-07-04T00_03_26.163019093Z.json  mirror-2026-07-04T00_03_28.008382000Z.json  mirror-2026-07-04T00_03_30.059211000Z.json  mirror-2026-07-04T00_03_32.485615915Z.json  mirror-2026-07-04T00_03_34.587868000Z.json  mirror-2026-07-04T00_03_50.044974301Z.json  mirror-2026-07-04T00_12_30.081899000Z.json  mirror-2026-07-04T00_15_00.123658000Z.json  mirror-2026-07-04T00_18_22.523955000Z.json  mirror-2026-07-04T00_24_40.436270000Z.json
tests/fixtures/tss/: js-verifier-golden.json
