[package]
name = "hiero-streams"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Parse and cryptographically verify Hedera record stream files (block streams to follow)"
repository = "https://github.com/hiero-hackers/hiero-streams-rs"

[lib]
# generated proto comments contain pseudo-code rustdoc would run
doctest = false

[dependencies]
prost = "0.13"
flate2 = "1"
sha2 = "0.10"
rsa = { version = "0.9", features = ["sha2"] }
hex = "0.4"
thiserror = "2"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
serde_json = "1"
